--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,59 @@
+*, *:before, *:after {
+  box-sizing: border-box;
+}
+
 body {
   background-color: #dadada;
-  font-size: 10px;
+  font-size: 75%;
+  font-weight: bold;
+}
+
+.container {
+  margin: 20px auto;
+  width: 90%;
+}
+
+div {
+  background-color: #dadada;
+  float: left;
+  margin: 1% 0;
+  width: 100%;
+  padding: 20px 25px;
+}
+
+.preview {
+  height: 180px;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.baku {
+  background-image: url("../images/baku.jpg");
+
+}
+
+.london {
+  background-image: url("../images/london.png");
+}
+
+.madrid {
+  background-image: url("../images/madrid.jpg");
+}
+
+.rome {
+  background-image: url("../images/rome.jpg");
+}
+
+@media screen and (min-width: 575px){
+   div {
+    margin: 1%;
+    width: 48%;
+  }
+}
+
+@media screen and (min-width: 991px){
+   div {
+    margin: 1%;
+    width: 23%;
+  }
 }
